syntax = "proto3";

options go_package = "./proto"

package greet_service

service GreetingService{
    rpc SayHello(NoParam) returns (HelloResponse)

    rpc SayHelloServerStreaming(NameList) return (stream HelloResponse)

    rpc SayHelloClientStreaming(stream HelloRequest) return (MessageList)

    rpc SayHelloBiDirectionalStreaming(stream HelloRequest) return (stream HelloResponse) 
}


message NoParam{};

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NameList {
    repeated string name = 1;
}

message MessageList{
    repeated string message = 1;
}



